fix(admin): display action buttons on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,14 @@ body {
   word-wrap: break-word !important;
   line-break: normal !important;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
